# differentiable

./: .gitignore  README.md
docking/: CLAUDE.md  PORT_PLAN.md  README.md  analyze.ipynb  docking.jl  docking_canonical.jl  docking_canonical_overrides.jl  docking_canonical_overrides_buggy.jl  train.ipynb  train_1CGI.ipynb  train_1ZHI.ipynb  train_elec.ipynb  train_param-apart.ipynb
docking/1KXQ/: 1KXQ.zd3.0.2.fg.fixed.out  1KXQ.zd3.0.2.fg.fixed.out.rmsds
docking/decoys_bm4_zd3.0.2_6deg_fixed/: README  create_lig  makefile  stats.bm4.zd3.0.2.fg.fixed.txt
docking/tools/: extract_atomtype_rules.py  extract_notebook.py
docking_torch/: FOLLOWUPS.md  PORT_PLAN_FFT.md  README.md  benchmark_gpu.py  pyproject.toml
docking_torch/examples/: 01_score_and_visualize.py  02_train.py  03_evaluate.py  04_fft_docking.py  04_train_on_bm4.py  05_fft_generate_decoys.py  06_train_dockq_fft.py  07_evaluate_dockq.py  _data.py
docking_torch/scripts/: build_fft_decoys.py  build_training_dataset.py  run_selfconsistent.sh
docking_torch/src/zdock/: __init__.py  _atomtype_rules.py  atomtypes.py  data.py  dockq.py  geom.py  io.py  rotation_grid.py  sasa.py  score.py  search.py  spread.py  train.py  zdock_output.py
docking_torch/tests/: conftest.py  test_data.py  test_dockq.py  test_io.py  test_orient.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase5.py  test_phase6_grad.py  test_phase7_train.py  test_physics.py  test_rotation_grid.py  test_search.py  test_zdock_output.py
forcefield/: README.md  exponential_averaging.ipynb  learn_lennard-jones.ipynb  learn_lennard-jones_mcmc_nbody.ipynb  learn_spring.ipynb  mbar.ipynb  mbar_lj.ipynb  mbar_mcmc.ipynb  mbar_natom.ipynb  mbarweight.ipynb
forcefield/alanine_dipeptide/: GB99dms_start.xml  Untitled.ipynb  convert_dcd_to_txt.ipynb  convert_txt_to_xml.ipynb  convert_xml_to_txt.ipynb  convert_xml_to_txt.py  create_dihedral_traj.py  create_ff.py  create_xml.ipynb  mbarweight.ipynb  mdtraj.ipynb  mdtraj_alanine.ipynb  openmm_analysis.ipynb  output.txt  run.sh  sim.py  train.ipynb  traj_target.chk  traj_target.txt
forcefield/archive/: exp_mcmc.ipynb
forcefield/mbar_alanine/: alanine_mbar.ipynb  mbar_alanine.ipynb  mbar_alanine_ksdensity.ipynb
forcefield/mbar_alanine_dipeptide/: analysis.ipynb  mbar_alanine_dipeptide.ipynb  mbar_coulomb.ipynb  mbar_ensemble_average_cpu.ipynb  (+8 more)
(+768 files in other folders)
