[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zdock"
version = "0.1.0"
description = "Differentiable ZDOCK in PyTorch (port of docking.jl + train_param-apart.ipynb)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "matsunagalab" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "h5py>=3.8",
]

[project.optional-dependencies]
# Legacy optional-deps markers kept so `pip install -e .[test]` keeps working.
test = ["pytest>=7.0", "pytest-xdist>=3"]
plot = ["matplotlib>=3.7"]

[dependency-groups]
# PEP 735 groups — `uv sync` installs these by default.
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
    "slow: long-running training / benchmark tests (opt-in with -m slow)",
]

# ---------------------------------------------------------------------------
# uv configuration — routes torch to the right wheel per platform so that
# `uv sync` "just works" on macOS (MPS) and Linux (CUDA 12.4).
#
#   macOS    → PyPI torch wheel (bundles Metal / MPS support)
#   Linux    → PyTorch's own CUDA index (cu124 wheels)
#   Windows  → PyPI torch wheel (CPU; CUDA users should uncomment the
#              Windows sources entry below or use `--index` at sync time)
#
# For a CPU-only Linux install, override the resolution with
#   `uv sync --index https://pypi.org/simple --reinstall-package torch`.
# ---------------------------------------------------------------------------
[tool.uv]
package = true                                # editable install of zdock
# Universal lock so the same uv.lock resolves on both mac and linux CI.
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    # macOS: default PyPI wheel — MPS support baked in since torch 2.0.
    # Leaving unspecified on darwin lets uv pick the PyPI index.
]
